--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bower": "^1.4.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "log4js": "^0.6.32",
+    "morgan": "^1.7.0",
     "mysql": "^2.10.2"
   }
 }
