--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "~1.3.15",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "angular-smart-table": "^2.1.7"
   }
 }
