--- a/package.json
+++ b/package.json
@@ -25,5 +25,14 @@
     "log4js": "^0.6.32",
     "morgan": "^1.7.0",
     "mysql": "^2.10.2"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
