--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hemanth-s-a/money-management",
   "dependencies": {
+    "big-decimal": "^1.0.2",
     "body-parser": "^1.15.0",
     "bower": "^1.4.1",
     "cors": "^2.7.1",
